force-app/main/default/objects/Beat_Matrix__c/Beat_Matrix__c.object-meta.xml
<CustomObject>
    <label>Beat Matrix</label>
    <nameField>
        <displayFormat>BM-{0000}</displayFormat>
        <label>Beat Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beat Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>