force-app/main/default/objects/Beat_Matrix__c/fields/Beat_Group__c.field-meta.xml
<CustomField>
    <fullName>Beat_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Beat_Matrix__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Group</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Beat_Matrix__c</referenceTo>
    <relationshipLabel>Group Member</relationshipLabel>
    <relationshipName>Beat_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>