force-app/main/default/objects/Beat_Matrix__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <label>Pincode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>