force-app/main/default/objects/Beat_Matrix__c/recordTypes/Beat_Plan_Matrix.recordType-meta.xml
<RecordType>
    <fullName>Beat_Plan_Matrix</fullName>
    <active>true</active>
    <label>Beat Plan Matrix</label>
</RecordType>