force-app/main/default/objects/Beat_Matrix__c/recordTypes/Group.recordType-meta.xml
<RecordType>
    <fullName>Group</fullName>
    <active>true</active>
    <label>Group</label>
</RecordType>