force-app/main/default/objects/Beat_Matrix__c/recordTypes/Group_Member.recordType-meta.xml
<RecordType>
    <fullName>Group_Member</fullName>
    <active>true</active>
    <label>Group Member</label>
</RecordType>