force-app/main/default/objects/Beat_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Dealer__c</columns>
    <columns>Beat_Group__c</columns>
    <columns>Group_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>