force-app/main/default/objects/Beat_Matrix__c/listViews/BeatGroup.listView-meta.xml
<ListView>
    <fullName>BeatGroup</fullName>
    <columns>NAME</columns>
    <columns>Group_Name__c</columns>
    <columns>ASM__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Beat_Matrix__c.Group</value>
    </filters>
    <label>Beat Group</label>
</ListView>