force-app/main/default/objects/Beat_Matrix__c/listViews/GroupMember.listView-meta.xml
<ListView>
    <fullName>GroupMember</fullName>
    <columns>NAME</columns>
    <columns>Beat_Group__c</columns>
    <columns>ASM__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Beat_Matrix__c.Group_Member</value>
    </filters>
    <label>Group Member</label>
</ListView>